examples/invalid/syntaxErr/sequence/emptySeq.wacc
# extra sequential composition
# Output:
# #syntax error#

#Program:#

begin ; end
